WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116202
[wk2] Minimum layout width is lost if the WebProcess crashes
https://bugs.webkit.org/show_bug.cgi?id=116202
Summary
[wk2] Minimum layout width is lost if the WebProcess crashes
Tim Horton
Reported
2013-05-15 19:04:04 PDT
We currently only send the minimum layout width to the WebProcess when the property is set. We also need to send it when the WebProcess is brought up, so that if the WebProcess crashes we send it back over again. <
rdar://problem/13202320
>
Attachments
patch
(2.06 KB, patch)
2013-05-15 19:08 PDT
,
Tim Horton
ap
: review+
Details
Formatted Diff
Diff
patch
(4.62 KB, patch)
2013-05-16 12:03 PDT
,
Tim Horton
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-05-15 19:08:21 PDT
Created
attachment 201911
[details]
patch
Alexey Proskuryakov
Comment 2
2013-05-15 19:10:33 PDT
Comment on
attachment 201911
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=201911&action=review
> Source/WebKit2/UIProcess/WebPageProxy.cpp:539 > + m_process->send(Messages::WebPage::SetMinimumLayoutWidth(m_minimumLayoutWidth), m_pageID, 0);
Can this be part of creation parameters, to avoid potential races?
Tim Horton
Comment 3
2013-05-15 19:11:44 PDT
Comment on
attachment 201911
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=201911&action=review
>> Source/WebKit2/UIProcess/WebPageProxy.cpp:539 >> + m_process->send(Messages::WebPage::SetMinimumLayoutWidth(m_minimumLayoutWidth), m_pageID, 0); > > Can this be part of creation parameters, to avoid potential races?
Aha! I knew there must be an existing mechanism for this. Will fix.
Tim Horton
Comment 4
2013-05-16 12:03:59 PDT
Created
attachment 201980
[details]
patch
Tim Horton
Comment 5
2013-05-16 12:08:29 PDT
http://trac.webkit.org/changeset/150197
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug