[wk2] Minimum layout width is lost if the WebProcess crashes https://bugs.webkit.org/show_bug.cgi?id=116202 <rdar://problem/13202320>

Reviewed by Darin Adler.

Send the minimum layout width to the WebProcess upon initialization,
so that crashed-and-restarted WebProcesses have the correct width.

* Shared/WebPageCreationParameters.cpp:
(WebKit::WebPageCreationParameters::encode):
(WebKit::WebPageCreationParameters::decode):
* Shared/WebPageCreationParameters.h:
(WebPageCreationParameters):
Add minimumLayoutWidth WebPage creation parameter.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::creationParameters):
Send the current minimumLayoutWidth to the WebPage when it's created.

(WebKit::WebPageProxy::setMinimumLayoutWidth):
Store minimumLayoutWidth changes that come in while the WebProcess is
not valid, so that the correct width is sent once it is restarted.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::WebPage):
Set minimumLayoutWidth to the value provided by our creation parameters.


Canonical link: https://commits.webkit.org/134621@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150197 268f45cc-cd09-0410-ab3c-d52691b4dbfc